--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,228 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+#screen{
+min-height:100%;
+}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+:root {
+    --main-blue: #000022;
+    --secondary-blue: #0AD6FF;
+    --aqua-marine: #26EEC0;
+    --snow-white: #FBF5F3;
+    --pink: #D90368;
+    --red: #cf1e07;
+    --green: #226704;
+  }
+
+/* Header */
+.toolbar {
+    background-color: var(--main-blue);
+    border-bottom: 2px solid var(--secondary-blue);
+    height: 60px;
+    color: white;
+    line-height: 52px;
+}
+
+.toolbar span {
+    font-size: 23px;
+    color: var(--secondary-blue);
+    font-weight: 500;
+    vertical-align: middle;
+    margin-left: 3%;
+}
+
+.toolbar a {
+    color: white;
+    margin-left: 4%;
+    font-size: 17px;
+    text-decoration: none;
+}
+
+.active {
+    text-decoration: underline !important;
+}
+
+/* Layout */
+
+.content {
+    padding: 3% 5%;
+    background-color: var(--snow-white);
+}
+
+
+.main-container {
+    background-color: white;
+    padding: 2%;
+    border-radius: 8px;
+    -webkit-box-shadow: 2px 2px 11px -2px #000000; 
+    box-shadow: 2px 2px 11px -2px #000000;
+}
+
+
+/* Table */
+.mat-mdc-table .mat-mdc-header-cell {
+    color: var(--main-blue);
+}
+
+.width-100 {
+    width: 100%;
+}
+
+
+
+/* Buttons */
+
+.icon-button {
+    border: none;
+    background: none;
+}
+
+.white-button {
+    background-color: white;
+    border: 1px solid var(--main-blue);
+    border-radius: 5px;
+}
+
+.white-button:hover {
+    background-color: rgb(231, 231, 231);
+    border: 1px solid var(--main-blue);
+    border-radius: 5px;
+}
+
+.blue-1-button {
+    background-color: var(--secondary-blue);
+    border: 1px solid var(--main-blue);
+    color: var(--main-blue);
+    border-radius: 5px;
+}
+
+.blue-1-button:hover {
+    background-color: #2ddcff;
+    border: 1px solid var(--main-blue);
+    color: var(--main-blue);
+    border-radius: 5px;
+}
+
+.blue-2-button {
+    background-color: var(--aqua-marine);
+    border: 1px solid var(--main-blue);
+    color: var(--main-blue);
+    border-radius: 5px;
+}
+
+.blue-2-button:hover {
+    background-color: rgb(103, 202, 177);
+    border: 1px solid var(--main-blue);
+    color: var(--main-blue);
+    border-radius: 5px;
+}
+
+.pink-button {
+    background-color: var(--pink);
+    color: white;
+    border-radius: 5px;
+    border: 1px solid var(--main-blue);
+}
+
+.pink-button:hover {
+    background-color: #e81f7d;
+    color: white;
+    border-radius: 5px;
+    border: 1px solid var(--main-blue);
+}
+
+.button-group {
+    padding-top: 2%;
+    margin-top: 5%;
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
+/* Margins */
+.mt-3 {
+    margin-top: 3%;
+}
+
+.mt-5 {
+    margin-top: 5%;
+}
+
+.ml-3 {
+    margin-left: 3%;
+}
+
+.ml-5 {
+    margin-left: 5%;
+}
+
+.mr-3 {
+    margin-right: 3%;
+}
+
+.mr-5 {
+    margin-right: 5%;
+}
+
+.mb-3 {
+    margin-bottom: 3%;
+}
+
+.mb-5 {
+    margin-bottom: 5%;
+}
+
+/* Display */
+.display-inline-flex {
+    display: inline-flex;
+}
+
+/* Breadcrumbs */
+
+.breadcrumb-item a {
+    color: var(--main-blue);
+}
+
+/* Dialog */
+
+.dialog {
+    width: 100%;
+    min-width: 600px;
+    border-radius: 5px;
+}
+
+.dialog-header {
+    height: 60px;
+    color: var(--main-blue);
+    background-color: white;
+    border-bottom: 3px solid var(--secondary-blue);
+    padding: 1% 3%;
+}
+
+.dialog-header h1 {
+    vertical-align: middle;
+    margin-top: 1%;
+}
+
+.dialog-container {
+    padding: 3% 5%;
+}
+
+
+/* Errors */
+.alert {
+    color: var(--red);
+    margin-top: -12px;
+    font-size: 11px;
+    margin-bottom: -24px;
+}
+
+.alert-message {
+    padding: 1rem 1rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    font-size: 14px;
+}
